# merge_sort

./: CMakeLists.txt  main.cpp  mergesort.cpp  mergesort.h
tests/: CMakeLists.txt  test_merge.cpp  test_mergesort.cpp  test_split.cpp
